[gd_scene load_steps=14 format=3 uid="uid://cl7tghv4aae1l"]

[ext_resource type="Script" uid="uid://c286qvkygjwu2" path="res://src/scripts/entities/npc_estorbo.gd" id="1_hycv5"]
[ext_resource type="Texture2D" uid="uid://b8hjwn2rgjpm1" path="res://_assets/art/sprites/npc-relleno-01.png" id="2_68fxv"]
[ext_resource type="PackedScene" uid="uid://b780qmfqgvwqn" path="res://src/scenes/entities/dialogo.tscn" id="3_qwqkt"]
[ext_resource type="Script" uid="uid://vjkti5djw36g" path="res://src/scripts/state_machine/state_machine_npc.gd" id="4_wepst"]
[ext_resource type="Script" uid="uid://da0kexnc4cfy" path="res://src/scripts/entities/npc_states/npc_init.gd" id="6_5mfyv"]
[ext_resource type="Script" uid="uid://bo52smwekckfl" path="res://src/scripts/entities/npc_states/npc_historia_talking.gd" id="7_68fxv"]
[ext_resource type="Script" uid="uid://blug75ilm3ygt" path="res://src/scripts/entities/npc_states/npc_historia_quest_waiting.gd" id="8_68fxv"]
[ext_resource type="Script" uid="uid://br4j7uly5m5m3" path="res://src/scripts/entities/npc_states/npc_historia_quest_completed.gd" id="8_djj4b"]
[ext_resource type="Script" uid="uid://cd77letq66pu8" path="res://src/scripts/entities/npc_states/npc_desactivated.gd" id="8_g2cmn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_djj4b"]
atlas = ExtResource("2_68fxv")
region = Rect2(0, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_f0bcc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djj4b")
}],
"loop": true,
"name": &"caminar",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djj4b")
}],
"loop": true,
"name": &"hablar",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djj4b")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvhpi"]
size = Vector2(96, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0bcc"]
size = Vector2(192, 128)

[node name="npc_historia" type="CharacterBody2D" groups=["npc_estorbo"]]
script = ExtResource("1_hycv5")
type = "historia"
dialog_id = "historia-1"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f0bcc")
animation = &"idle"

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_fvhpi")

[node name="DialogArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogArea2D"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_f0bcc")
debug_color = Color(0.78039217, 0.40784314, 0.44705883, 0.06666667)

[node name="dialogo" parent="." instance=ExtResource("3_qwqkt")]
position = Vector2(30, -64)

[node name="StateMachineNPC" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_wepst")
initial_state = NodePath("NpcInit")

[node name="NpcInit" type="Node" parent="StateMachineNPC"]
script = ExtResource("6_5mfyv")
metadata/_custom_type_script = "uid://da0kexnc4cfy"

[node name="NpcDesactivated" type="Node" parent="StateMachineNPC"]
script = ExtResource("8_g2cmn")
metadata/_custom_type_script = "uid://cd77letq66pu8"

[node name="NpcHistoriaTalking" type="Node" parent="StateMachineNPC"]
script = ExtResource("7_68fxv")
metadata/_custom_type_script = "uid://bo52smwekckfl"

[node name="NpcHistoriaQuestCompleted" type="Node" parent="StateMachineNPC"]
script = ExtResource("8_djj4b")
metadata/_custom_type_script = "uid://br4j7uly5m5m3"

[node name="NpcHistoriaQuestWaiting" type="Node" parent="StateMachineNPC"]
script = ExtResource("8_68fxv")
metadata/_custom_type_script = "uid://blug75ilm3ygt"

[connection signal="body_entered" from="DialogArea2D" to="." method="_on_dialog_area_2d_body_entered"]
[connection signal="body_exited" from="DialogArea2D" to="." method="_on_dialog_area_2d_body_exited"]
